Mostly working port